nori-rs/tui-pty-e2e/tests/snapshots/prepared_startup__active_session_approval_picker.snap
---
source: tui-pty-e2e/tests/prepared_startup.rs
expression: "tui_pty_e2e::normalize_for_input_snapshot(session.screen_contents())"
---
• Remote Handroll options: Model=Mock Default Model, Thought Level=Medium (/config to change)

  Select approval mode
  Choose what Nori can do without approval

   1. Read Only
      Requires approval to edit files and run commands.
  ▏2. Agent (current)                                                                            ▕
  ▏   Read and edit files, and run commands.                                                     ▕
   3. Agent (full access)
      Can edit files outside this workspace and run commands with network access. Exercise cauti…
  ↑↓/j/k move  enter select  esc close
